--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "id": "dfe8bee9-afe9-4eef-badc-3e30cebb0c33",
-  "name": "KNH Cloud Streaming",
+  "name": "Cloud Streaming",
   "publisher": "Keith How",
   "version": "1.0.0.0",
   "brief": "Cloud Streaming",
@@ -9,7 +9,7 @@
   "EULA": "",
   "help": "",
   "url": "",
-  "logo": "",
+  "logo": "./logo/KNH.jpg",
   "dependencies": [],
   "screenshots": [],
   "platform": "1.0.0.0",
